[package]
name = "tcp-relay-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { features = ["full"], version = "1.17.0" }
clap = { features = ["derive"], version = "3.1.8" }
anyhow = "1.0.56"

[[bin]]
name = "tcp-relay-rust"
path = "src/bin/proxy.rs"
