[package]
name = "tcp-relay-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { features = [
    "rt-multi-thread",
    "net",
    "macros",
    "io-util",
    "io-std",
], version = "1" }
clap = { features = ["derive"], version = "3" }
anyhow = "1"

[[bin]]
name = "tcp-relay-rust"
path = "src/bin/proxy.rs"
